# mess-term-client

./: Cargo.toml
src/: api.rs  app.rs  auth.rs  chat.rs  constants.rs  contact.rs  event.rs  factory.rs  helpers.rs  input.rs  main.rs  schemas.rs  session.rs  storage.rs  tui.rs  ui.rs  update.rs
src/chat/: builder.rs  manager.rs  message.rs  mod.rs
src/helpers/: hash_map.rs  list.rs  mod.rs  traits.rs  types.rs
src/input/: mod.rs
src/input/entities/: login.rs  search.rs
src/ui/: chat.rs  login.rs  main.rs  mod.rs  states.rs  tui.rs
src/window/: login.rs  main.rs  mod.rs
