[package]
name = "mess-term-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs = "5.0"
futures = "0.3"
ratatui = { version = "0.25", features = ["all-widgets"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
