[package]
name = "mess-term-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0"
futures = "0.3"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
url = "2.5"
rand = "0.8"
base64 = "0.21"
governor = "0.6"
clock = "0.3"
gapbuf = "0.1"
strum = "0.26"
